# jj-version

./: .release-please-manifest.json  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
crates/jj-version/: CHANGELOG.md  Cargo.toml
crates/jj-version-macro/: CHANGELOG.md  Cargo.toml  README.md
crates/jj-version-macro/src/: lib.rs
crates/jj-version/src/: lib.rs
crates/jj-version/tests/: jj_version.rs
