[package]
name = "jj-version-macro"
version = "0.1.1"
edition = "2024"
description = "Proc macro for jj-version"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/dstoc/jj-version"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
